--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "@types/pixi.js": "~4.8.3",
     "http-server": "~0.11.1",
-    "parcel-bundler": "~1.10.3"
+    "parcel-bundler": "~1.10.3",
+    "typescript": "~3.1.6"
   },
   "keywords": [],
   "author": {
